exports[`Auth CLEAR_ACTOR action 1`] = `
Object {
  "actor": Object {
    "dataportenId": "jarle",
    "fn": "Jarle Stabell",
    "id": 1
  },
  "user": Object {
    "accessToken": "fake-token-zab-xy-jarle",
    "emails": Array [
      "foo@bar.bas"
    ],
    "groups": Array [
      "EtnoLes",
      "FotoLes"
    ],
    "name": "Jarle Stabell",
    "userId": "jarle"
  }
}
`;

exports[`Auth CLEAR_USER action 1`] = `
Object {
  "actor": Object {
    "dataportenId": "jarle",
    "fn": "Jarle Stabell",
    "id": 1
  },
  "user": Object {}
}
`;

exports[`Auth SET_USER action 1`] = `
Object {
  "actor": Object {
    "dataportenId": "jarle",
    "fn": "Jarle Stabell",
    "id": 1
  },
  "user": UserSession {
    "accessToken": "token",
    "actor": null,
    "groups": Array [],
    "museumId": MuseumId {
      "museumId": 99
    }
  }
}
`;

exports[`Auth creates LOAD_ACTOR_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/auth/LOAD_ACTOR"
  },
  Object {
    "result": Object {
      "dataportenId": "jarle",
      "fn": "Jarle Stabell",
      "id": 1
    },
    "type": "musit/auth/LOAD_ACTOR_SUCCESS"
  }
]
`;

exports[`Auth fail action 1`] = `
Object {
  "error": [Error: Some error here.],
  "loaded": false,
  "loading": false,
  "user": Object {}
}
`;

exports[`Auth initial action 1`] = `
Object {
  "loaded": false,
  "loading": true,
  "user": Object {}
}
`;

exports[`Auth no action 1`] = `
Object {
  "user": Object {}
}
`;

exports[`Auth success action with applicationId 1`] = `
Object {
  "loaded": true,
  "loading": false,
  "user": UserSession {
    "accessToken": undefined,
    "actor": Actor {
      "applicationId": "932f8aad-5bf2-409d-8916-c91c24b31152",
      "dataportenId": undefined,
      "fn": "Some fancy user",
      "id": 1
    },
    "groups": undefined,
    "museumId": undefined
  }
}
`;

exports[`Auth success action with dataportenId 1`] = `
Object {
  "loaded": true,
  "loading": false,
  "user": UserSession {
    "accessToken": undefined,
    "actor": Actor {
      "applicationId": undefined,
      "dataportenId": "e7107fd4-4822-466f-9041-2e67095d8e2d",
      "fn": "Some fancy user",
      "id": 1
    },
    "groups": undefined,
    "museumId": undefined
  }
}
`;

exports[`Auth undefined action 1`] = `
Object {
  "actor": Object {
    "dataportenId": "jarle",
    "fn": "Jarle Stabell",
    "id": 1
  },
  "user": Object {
    "accessToken": "fake-token-zab-xy-jarle",
    "emails": Array [
      "foo@bar.bas"
    ],
    "groups": Array [
      "EtnoLes",
      "FotoLes"
    ],
    "name": "Jarle Stabell",
    "userId": "jarle"
  }
}
`;
